# cookiecutter-roboto-actions

./: .flake8  .gitignore  Makefile  README.md  cookiecutter.json  pyproject.toml
cookiecutter-roboto-generic-action/: cookiecutter.json
cookiecutter-roboto-generic-action/hooks/: post_gen_project.sh
cookiecutter-roboto-generic-action/{{cookiecutter.__project_slug}}/: Dockerfile  README.md  build.sh  deploy.sh  run.sh  setup.sh
cookiecutter-roboto-generic-action/{{cookiecutter.__project_slug}}/scripts/: build.sh  deploy.sh  run.sh  setup.sh
cookiecutter-roboto-python-action/: cookiecutter.json
cookiecutter-roboto-python-action/hooks/: post_gen_project.sh
cookiecutter-roboto-python-action/{{cookiecutter.__package_name}}/: Dockerfile  README.md  action.json  build.sh  run.sh
cookiecutter-roboto-python-action/{{cookiecutter.__package_name}}/scripts/: build.sh  deploy.sh
cookiecutter-roboto-python-action/{{cookiecutter.__project_slug}}/: .python-version  DEVELOPING.md  Dockerfile  README.md  action.json  requirements.runtime.txt
cookiecutter-roboto-python-action/{{cookiecutter.__project_slug}}/scripts/: build.sh  deploy.sh  run.sh  setup.sh
cookiecutter-roboto-python-action/{{cookiecutter.__project_slug}}/src/{{cookiecutter.__package_name}}/: __init__.py  __main__.py  main.py
{{cookiecutter.__project_slug}}/: .gitignore  .python-version  DEVELOPING.md  Dockerfile  README.md  action.json  pyproject.toml  requirements.dev.txt  requirements.runtime.txt
{{cookiecutter.__project_slug}}/scripts/: build.sh  deploy.sh  setup.sh  verify.sh
{{cookiecutter.__project_slug}}/src/{{cookiecutter.__package_name}}/: logger.py  main.py
{{cookiecutter.__project_slug}}/test/: test_main.py
