[tool.poetry]
name = "cookiecutter-roboto-actions"
version = "0.1.0"
description = "Project templates for Roboto Actions"
authors = ["Roboto <admin@roboto.ai>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"

[tool.poetry.group.dev.dependencies]
autoflake = "~2.2"
black = "~23.9"
cookiecutter = "~2.4"
flake8 = "~6.1"
isort = "~5.12"
poetry = "~1.6"
roboto = "~0.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
force_sort_within_sections = true
line_length = 50
multi_line_output = 3  # https://pycqa.github.io/isort/docs/configuration/multi_line_output_modes.html
profile = "black"
